system design question refactoring